edit navbar and separate file

--- a/templates/eve_holder/navbar.html
+++ b/templates/eve_holder/navbar.html
@@ -15,6 +15,7 @@
             </li>
             {% elif user.groups.all.0.name == "Host" %}
             <a class="nav-link" href="{% url 'eve_holder:create_event' %}" style="color:white;">Create Event</a>
+            <a class="nav-link" href="{% url 'eve_holder:host' %}" style="color:white;">My Events</a>
             {% else %}
             <li class="nav-item active">
                 <a class="nav-link" href="{% url 'eve_holder:homepage' %}">Homepage</a>
@@ -28,20 +29,20 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="{% url 'eve_holder:my_account' %}">Account</a>
-
-                    <a class="dropdown-item" data-target=".bs-logout-modal-sm" data-toggle="modal">Logout</a>
-                    <div tabindex="-1" class="modal bs-logout-modal-sm" role="dialog" aria-hidden="true">
-                        <div class="modal-dialog modal-sm">
-                            <div class="modal-content">
-                                <div class="modal-header"><h4>Logout <i class="fa fa-lock"></i></h4></div>
-                                <div class="modal-body"><i class="fa fa-question-circle"></i> Are you sure you want to
-                                    log-off?
-                                </div>
-                                <div class="modal-footer"><a class="btn btn-primary btn-block"
-                                                             href="{% url 'eve_holder:logout' %}">Logout</a></div>
-                            </div>
-                        </div>
-                    </div>
+                    <a class="dropdown-item" href="{% url 'eve_holder:logout' %}">Logout</a>
+<!--                    <a class="dropdown-item" data-target=".bs-logout-modal-sm" data-toggle="modal">Logout</a>-->
+<!--                    <div tabindex="-1" class="modal bs-logout-modal-sm" role="dialog" aria-hidden="true">-->
+<!--                        <div class="modal-dialog modal-sm">-->
+<!--                            <div class="modal-content">-->
+<!--                                <div class="modal-header"><h4>Logout <i class="fa fa-lock"></i></h4></div>-->
+<!--                                <div class="modal-body"><i class="fa fa-question-circle"></i> Are you sure you want to-->
+<!--                                    log-off?-->
+<!--                                </div>-->
+<!--                                <div class="modal-footer"><a class="btn btn-primary btn-block"-->
+<!--                                                             href="{% url 'eve_holder:logout' %}">Logout</a></div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
                 </div>
             </li>
         </ul>
@@ -84,19 +85,19 @@
 <!--            </form>-->
 <!--        {% if user.is_authenticated %}-->
 <!--            <span class="hello-msg" id="hello-msg">Hello, {{ request.user }}</span>-->
-<button class="btn btn-primary" data-target=".bs-logout-modal-sm" data-toggle="modal">Logout</button>
+<!--<button class="btn btn-primary" data-target=".bs-logout-modal-sm" data-toggle="modal">Logout</button>-->
 
-<div tabindex="-1" class="modal bs-logout-modal-sm" role="dialog" aria-hidden="true">
-    <div class="modal-dialog modal-sm">
-        <div class="modal-content">
-            <div class="modal-header"><h4>Logout <i class="fa fa-lock"></i></h4></div>
-            <div class="modal-body"><i class="fa fa-question-circle"></i> Are you sure you want to log-off?
-            </div>
-            <div class="modal-footer"><a class="btn btn-primary btn-block"
-                                         href="{% url 'eve_holder:logout' %}">Logout</a></div>
-        </div>
-    </div>
-</div>
+<!--<div tabindex="-1" class="modal bs-logout-modal-sm" role="dialog" aria-hidden="true">-->
+<!--    <div class="modal-dialog modal-sm">-->
+<!--        <div class="modal-content">-->
+<!--            <div class="modal-header"><h4>Logout <i class="fa fa-lock"></i></h4></div>-->
+<!--            <div class="modal-body"><i class="fa fa-question-circle"></i> Are you sure you want to log-off?-->
+<!--            </div>-->
+<!--            <div class="modal-footer"><a class="btn btn-primary btn-block"-->
+<!--                                         href="{% url 'eve_holder:logout' %}">Logout</a></div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 <!--        {% else %}-->
 <!--            <span class="login-msg">You are not logged in</span>-->
 <!--            <a class="btn btn-primary" href="{% url 'eve_holder:login' %}">Log In</a>-->
