--- a/templates/eve_holder/messages.html
+++ b/templates/eve_holder/messages.html
@@ -3,8 +3,8 @@
 
     {% if message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
     <div class="alert w3-animate-opacity w3-round">
-        <span class="closebtn" onclick="this.parentElement.style.display='none';" data-dismiss="alert">&times;</span> 
-        <strong>Warning!</strong> {{ message }}
+        <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+        <strong>Warning:</strong> {{ message }}
     </div>
     {% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
     <div class="success w3-animate-opacity w3-round">
@@ -14,7 +14,7 @@
     {% elif message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
     <div class="danger w3-animate-opacity w3-round">
         <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-        <strong>Danger!</strong> {{ message }}
+        <strong>Danger:</strong> {{ message }}
     </div>
     {% elif message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
     <div class="info w3-animate-opacity w3-round">
