--- a/templates/eve_holder/visitor.html
+++ b/templates/eve_holder/visitor.html
@@ -29,13 +29,8 @@
             </div>
         </div>
 
-        <div class="col-md">
-            <div class="card card-body" style="min-height: 275px">
-                <h5>Total Events</h5>
-                <hr>
-                <h1 style="text-align: center;padding: 10px">{{ events_count }}</h1>
-            </div>
-        </div>
+        {% include 'eve_holder/notifications.html' %}
+        
     </div>
 
     <br>
