--- a/templates/eve_holder/visitor_my_account.html
+++ b/templates/eve_holder/visitor_my_account.html
@@ -4,43 +4,71 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Account</title>
 </head>
 <body>
 {% block content %}
 
-    <br>
+<div class="row">
+    <div class="col-md-2"></div>
 
-    <div class="row">
-        <div class="col-md">
-            <div class="card card-body">
-                <h5>Visitor: {{ visitors.user }}</h5>
-                <hr>
-                <a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'eve_holder:visitor_update_information' %}">Update Account</a>
-                <a class="btn btn-outline-danger  btn-sm btn-block" href="{% url 'eve_holder:delete_account' %}">Delete Account</a>
-
+    <div class="col-md-4">
+        <div class="card card-body" style="width: fit-content; margin-right: auto; margin-left: auto; margin-top: 3%; margin-bottom: auto">
+            <img class="profile-pic" src="{{ request.user.visitor.profile_pic.url }}" style="width: 350px;height: 180px">
+            <hr>
+            <div class="row" >
+                <div class="col-sm-3 col-md-4 col-3">
+                    <label>Username: </label>
+                </div>
+                <div class="col-md-8 col-5">
+                    {{ user.username }}
+                </div>
             </div>
-        </div>
-
-        <div class="col-md">
-            <div class="card card-body">
-                <h5>Contact Information</h5>
-                <hr>
-                <p>Firstname: {{ user.first_name }}</p>
-                <p>Lastname: {{ user.last_name }}</p>
-                <p>Email: {{ visitors.email }}</p>
-                <p>Phone: {{ visitors.phone_num }}</p>
+            <div class="row" >
+                <div class="col-sm-3 col-md-4 col-3">
+                    <label>First Name: </label>
+                </div>
+                <div class="col-md-8 col-5">
+                    {{ user.first_name }}
+                </div>
             </div>
-        </div>
-
-        <div class="col-md">
-            <div class="card card-body">
-                <h5>Total Events</h5>
-                <hr>
-                <h1 style="text-align: center;padding: 10px">{{ events_count }}</h1>
+            <div class="row" >
+                <div class="col-sm-3 col-md-4 col-3">
+                    <label>Last Name: </label>
+                </div>
+                <div class="col-md-8 col-5">
+                    {{ user.last_name }}
+                </div>
             </div>
+            <div class="row" >
+                <div class="col-sm-3 col-md-4 col-3">
+                    <label>Email: </label>
+                </div>
+                <div class="col-md-8 col-5">
+                    {{ user.email }}
+                </div>
+            </div>
+            <div class="row" >
+                <div class="col-sm-3 col-md-4 col-3">
+                    <label>Phone: </label>
+                </div>
+                <div class="col-md-8 col-5">
+                    {{ visitors.phone_num }}
+                </div>
+            </div>
+            <a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'eve_holder:visitor_update_information' %}">Update Account</a>
+            <a class="btn btn-outline-danger  btn-sm btn-block" href="{% url 'eve_holder:delete_account' %}">Delete Account</a>
         </div>
     </div>
+    <div class="col-md-4">
+        <div class="card card-body">
+            <h5>Total Events</h5>
+            <hr>
+            notification
+        </div>
+    </div>
+    <div class="col-md-2"></div>
+</div>
 {% endblock %}
 </body>
 </html>
