--- a/templates/eve_holder/dashboard.html
+++ b/templates/eve_holder/dashboard.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <!-- {% include 'eve_holder/status.html' %} -->
+    {#{% include 'eve_holder/status.html' %}#}
     <br>
 
     {% include 'eve_holder/messages.html' %}
