--- a/templates/eve_holder/homepage.html
+++ b/templates/eve_holder/homepage.html
@@ -17,7 +17,7 @@
         {% if not user.is_authenticated %}
         <div id="navbar-content-right">
             <a id="navbar-login" href="{% url 'eve_holder:login' %}">LOGIN</a>
-            <a id="navbar-signup" href="{% url 'eve_holder:register' %}">SIGNUP</a>
+{#            <a id="navbar-signup" href="{% url 'eve_holder:register' %}">SIGNUP</a>#}
         </div>
         {% else %}
             {% if user.group.all == "Visitors" %}
@@ -32,6 +32,8 @@
 
         {% endif %}
 </nav>
+<form method="POSt" action="">
+    {% csrf_token %}
 <div id="content">
     <div id="block1">
         <div id="block1-text">
@@ -67,6 +69,9 @@
                 Start being a host in a blink by filling your event's information.
                 <br> Your event is now ready to go.
             </div>
+            <div id="block2-description" data-aos="fade-up" data-aos-duration="1300">
+                <button type="submit" class="btn1 mt-3 mb-3 btn1 form-control" name="click" value="host">Register as a Host</button>
+            </div>
         </div>
         <img src="{% static 'eve_holder/../../static/images/block2.jpg' %}">
     </div>
@@ -79,12 +84,15 @@
                 “Somewhere, something incredible is waiting to be known.” – Sharon Begley <br>
                 Are you ready to discover a new thing?
             </div>
+            <div id="block2-description" data-aos="fade-up" data-aos-duration="1300">
+                <button type="submit" class="btn1 mt-3 mb-3 btn1 form-control" name="click" value="visitor">Register as a Visitor</button>
+            </div>
         </div>
         <img src="{% static 'eve_holder/../../static/images/lastblock.jpg' %}">
     </div>
 
 </div>
-
+</form>
 </body>
 
 
