--- a/templates/eve_holder/visitor.html
+++ b/templates/eve_holder/visitor.html
@@ -2,12 +2,22 @@
 {% load static %}
 
 {% block content %}
-<link rel="stylesheet" type="text/css" href="{% static '/css/registered_event.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static '/css/registered_events.css' %}">
 
 <body>
+
+<div class="above">
+    <div class="inspiration-text">
+            <div id="sentence1">"The journey of a thousand miles begins with one step."</div>
+            <div class="author">-Lao Tzu-</div>
+            <div class="section-separator">______</div>
+    </div>
+    <img id="inspire-pic" src="{% static '/images/cover2.jpg' %}">
+</div>
 <div class="event-cards">
 
     {% for event in events %}
+    <div class="event-container" id="event-container">
     <div class="event">
     <!--    <div class="rank">3</div>-->
         <div class="front">
@@ -16,13 +26,15 @@
             {% else %}
                 <img class="thumbnail" src="{% static 'block2.jpg' %}" alt="event's picture">
             {% endif %}
-            <h4 class="event-name">{{ event.event_name }}</h4>
-            <div class="stats">
-                <p class="host-name">by {{ event.event_host.all.0 }}</p>
-                <div class="host-picture">
-                    <img src="{{ event.event_host.all.0.profile_pic.url }}" alt="">
+<!--            <div id="event-name-container">-->
+                <h4 class="event-name">{{ event.event_name }}</h4>
+                <div class="stats">
+                    <p class="host-name">by {{ event.event_host.all.0 }}</p>
+                    <div class="host-picture">
+                        <img src="{{ event.event_host.all.0.profile_pic.url }}" alt="">
+                    </div>
                 </div>
-            </div>
+<!--            </div>-->
         </div>
 
         <div class="back">
@@ -36,7 +48,7 @@
             </div>
             <div class="short-description">
                 <p class="event-description">Event Day: {{ event.event_date }}</p>
-                {% if event.event_location is not None %}
+                 {% if event.event_location is not None %}
                     <p class="event-description">Location: {{ event.event_location }}</p>
                 {% else %}
                     <p class="event-description">Location: tbc.</p>
@@ -61,7 +73,8 @@
     <!--            </div>-->
     <!--        </div>-->
         </div>
-        <div class="background"></div>
+<!--        <div class="background"></div>-->
+    </div>
     </div>
 {% endfor %}
     </div>
