edit grid column

--- a/static/css/all_events.css
+++ b/static/css/all_events.css
@@ -56,12 +56,13 @@
     /*flex-direction: row;*/
 }
 .event-cards{
+    margin-right: 20px;
+    margin-left: 20px;
     padding-top: 100px;
     grid-column-gap: 30px;
     display: grid;
     grid-auto-rows: minmax(350px, auto);
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    /*place-items: start center;*/
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     justify-items: center;
     grid-row-gap: 70px;
     margin-bottom: 70px;
