--- a/templates/eve_holder/homepage.html
+++ b/templates/eve_holder/homepage.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load group_tags %}
 <html lang="en">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -20,18 +21,16 @@
             <a id="navbar-signup" href="{% url 'eve_holder:register' %}">SIGNUP</a>
         </div>
         {% else %}
-            {% if user.group.all == "Visitors" %}
+            {% if user|has_group:"Visitors" %}
                 <div id="navbar-content-right-visitor">
                     <a id="navbar-visitor" href="{% url 'eve_holder:visitor' %}">let's go!</a>
                 </div>
-<!--    user.group.all == "Host"-->
-<!--            {% elif "Host" in user.group.all %}-->
-                {% elif user.group.all == "Host" %}
+            {% elif user|has_group:"Host" %}
                 <div id="navbar-content-right-host">
                     <a id="navbar-host" href="{% url 'eve_holder:host' %}">let's go!</a>
                 </div>
             {% else %}
-                <div id="invalid-account">please use the correct user type<a href="{% url 'eve_holder:logout' %}">Logout</a></div>
+                <div id="invalid-account">please use the correct user type <a href="{% url 'eve_holder:logout' %}">Logout</a></div>
             {% endif %}
         {% endif %}
 </nav>
