change storage for static file to s3 bucket

--- a/templates/eve_holder/homepage.html
+++ b/templates/eve_holder/homepage.html
@@ -45,7 +45,7 @@
                 EVEHOLDER
             </div>
         </div>
-        <img src="{% static 'eve_holder/../../static/images/block1.jpg' %}" alt="Welcome to EveHolder">
+        <img src="{% static 'images/block1.jpg' %}" alt="Welcome to EveHolder">
     </div>
     <div id="brand-information">
         <div id="brand-information-text">
@@ -56,7 +56,7 @@
                 A web application for creating and joining events.
             </div>
         </div>
-        <img src="{% static 'eve_holder/../../static/images/brandinfo.jpg' %}" alt="EveHolder info pic">
+        <img src="{% static 'images/brandinfo.jpg' %}" alt="EveHolder info pic">
     </div>
     <div id="block2">
         <div id="block2-text">
@@ -68,7 +68,7 @@
                 <br> Your event is now ready to go.
             </div>
         </div>
-        <img src="{% static 'eve_holder/../../static/images/block2.jpg' %}" alt="Host Block pic">
+        <img src="{% static 'images/block2.jpg' %}" alt="Host Block pic">
     </div>
     <div id="block3">
         <div id="block3-text">
@@ -80,7 +80,7 @@
                 Are you ready to discover a new thing?
             </div>
         </div>
-        <img src="{% static 'eve_holder/../../static/images/lastblock.jpg' %}" alt="Visitors block pic">
+        <img src="{% static 'images/lastblock.jpg' %}" alt="Visitors block pic">
     </div>
 
 </div>
