creat event page

--- a/static/css/login.css
+++ b/static/css/login.css
@@ -39,9 +39,10 @@ img{
     color: white;
 }
 
-.username{
+.username {
     top: 30px;
     line-height: 30px;
     padding: 0 10px;
     width: 200px;
+}
   
