--- a/templates/eve_holder/visitor_my_account.html
+++ b/templates/eve_holder/visitor_my_account.html
@@ -60,11 +60,7 @@
         </div>
     </div>
     <div class="col-md-4">
-        <div class="card card-body">
-            <h5>Total Events</h5>
-            <hr>
-            notification
-        </div>
+        {% include 'eve_holder/notifications.html' %}
     </div>
     <div class="col-md-2"></div>
 </div>
