--- a/templates/eve_holder/create_event.html
+++ b/templates/eve_holder/create_event.html
@@ -19,61 +19,60 @@
         <form action="" method="post">
             {% csrf_token %}
 
-{#            <div class="fill">#}
             <div class="form-group col-md-4" style="margin-top: 10px">
                 <label for="" class="col-form-label namecol fill">Event Name: </label>
             </div>
-            <div class="form-group col-md-6" style="margin-top: -10px">
+            <div class="form-group col-md-8" style="margin-top: -10px">
                 {{ form.event_name }}
+            </div>
+
+{#            <div class="fill" style="margin-top: -25px">#}
+            <div class="form-group col-md-4" style="margin-top: -10px">
+                <label class="col-form-label namecol fill" >Description: </label>
+            </div>
+            <div class="form-group col-md-8" style="margin-top: -10px">
+                {{ form.event_description }}
             </div>
 {#            </div>#}
 
-            <div class="fill" style="margin-top: -25px">
-            <div class="form-group col-md-4" style="margin-top: -10px">
-                <label for="" class="col-form-label namecol fill" >Description: </label>
-            </div>
-            <div class="form-group col-md-6 fill" style="margin-top: -10px">
-                {{ form.event_description }}
-            </div>
-            </div>
-
-            <div class="fill">
+{#            <div class="fill">#}
             <div class="form-group col-md-4">
-                <label for="" class="col-form-label namecol fill">Location: </label>
+                <label class="col-form-label namecol fill">Location: </label>
             </div>
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-8">
                 {{ form.event_location }}
             </div>
-            </div>
+{#            </div>#}
 
             <div class="form-group col-md-4">
                 <label class="col-form-label namecol fill">Event Date: </label>
             </div>
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-8">
                 {{ form.event_date }}
             </div>
 
-            <div class="row">
+{#            <div class="row">#}
                  <div class="form-group col-md-4">
                     <label for="" class="col-form-label namecol fill">Date: </label>
                  </div>
-                <div class="form-group col-md-3">
+                <div class="form-group col-md-4">
                     {{ form.pub_date }}
-                    <label for="" class="namesm label">Publish Date</label>
+                    <label class="namesm">Publish Date</label>
                 </div>
-                <div class="form-group col-md-3">
+                <div class="form-group col-md-4">
                     {{ form.end_date }}
-                    <label for="" class="namesm label">End Date</label>
+                    <label class="namesm">End Date</label>
                 </div>
-            </div>
+{#            </div>#}
 
             <div class="form-group col-md-4" style="top: -10px">
                 <label class="col-form-label namecol fill" style="top: -20px">Event Amount Accept: </label>
             </div>
-            <div class="form-group col-md-6" style="top: -35px">
+            <div class="form-group col-md-8" style="top: -35px">
                 {{ form.amount_accepted }}
             </div>
-            <div class="col-md-10" style="margin-top: -20px; top: -25px">
+
+            <div class="col-md-12" style="margin-top: -20px; top: -5px">
                 <button type="submit" class="btn1 mt-3 mb-3" name="click" style="line-height: 28px">Create event</button>
             </div>
         </form>
