--- a/templates/eve_holder/login.html
+++ b/templates/eve_holder/login.html
@@ -31,16 +31,14 @@
                                 <input type="text" name="username" placeholder=" Username..." class="username my-3">
                             </div>
                         </div>
-<<<<<<< HEAD
                     <div class="form-row">
                         <div class="col-lg-8">
                             <input type="password" name="password" placeholder=" Password..." class="username my-3">
-=======
+                        </div>
                         <div class="form-row">
                             <div class="col-lg-8">
                                 <input type="password" name="password" placeholder=" Password..." class="username my-3">
                             </div>
->>>>>>> ebd26f821fa84bd6ac1b0092f8871d44542a3e41
                         </div>
                         <div class="form-row">
                             <div class="col-lg-9">
@@ -54,7 +52,6 @@
                              or <a href="{% url 'eve_holder:homepage' %}">Back</a>
                             <p>Don't have an account? <a href="{% url 'eve_holder:register' %}">Register here</a></p>
                         </div>
-<<<<<<< HEAD
                         {% for message in messages %}
                         <p id="messages">{{ message }}</p>
                         {% endfor %}
@@ -62,14 +59,10 @@
                         <a href="#">Forget Password</a>
                           or <a href="{% url 'eve_holder:homepage' %}">Back</a>
                         <p>Don't have an account? <a href="{% url 'eve_holder:register' %}">Register here</a></p>
-=======
->>>>>>> ebd26f821fa84bd6ac1b0092f8871d44542a3e41
+                        </div>
                     </form>
                 </div>
             </div>
-            {% for message in messages %}
-                <p id="messages">{{ message }}</p>
-            {% endfor %}
         </div>
     </div>
 </section>
